--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.lottry"
+        applicationId "com.LutoIndiaLuto"
         minSdk 21
         targetSdk 31
         versionCode 1
