--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Mar 26 11:35:46 IST 2022
-sdk.dir=C\:\\Users\\91881\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/mac/Library/Android/sdk
